--- a/src/main/resources/parameters.fxml
+++ b/src/main/resources/parameters.fxml
@@ -15,7 +15,8 @@
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             minHeight="550.0" minWidth="850.0"
-            fx:controller="agh.ics.oop.presenter.ParametersPresenter">
+            fx:controller="agh.ics.oop.presenter.ParametersPresenter"
+            stylesheets="style.css">
     <top>
     </top>
     <center>
